# mmux-cc-libc

./: Makefile.am  NEWS  README  TODO  configure.ac
doc/: macros.texi  mmux-cc-libc-macros.texi  mmux-cc-libc.texi
meta/autoconf/: mmux.m4
meta/scripts/: mmux-cc-libc.pc.in
src/: mmux-cc-libc-characters.c.m4  mmux-cc-libc-config.h.in  mmux-cc-libc-constants.h.m4  mmux-cc-libc-errors.c.m4  mmux-cc-libc-file-descriptors.c.m4  mmux-cc-libc-file-system-pathnames.c.m4  mmux-cc-libc-file-system.c.m4  mmux-cc-libc-functions.h.m4  mmux-cc-libc-generics.h.m4  mmux-cc-libc-internals.h.m4  mmux-cc-libc-interprocess-signals.c.m4  mmux-cc-libc-library.c.m4  mmux-cc-libc-memory.c.m4  mmux-cc-libc-networking.c.m4  mmux-cc-libc-persona.c.m4  mmux-cc-libc-processes.c.m4  mmux-cc-libc-signals.c.m4  mmux-cc-libc-sockets.c.m4  mmux-cc-libc-strings.c.m4  mmux-cc-libc-system-configuration.c.m4  mmux-cc-libc-time.c.m4  mmux-cc-libc-typedefs.h.m4  mmux-cc-libc.h.m4
src/m4/: macros-for-cc.m4  mmux-cc-libc-config.m4.in
tests/: mmux_libc_fork.c  mmux_libc_mfd.c  mmux_libc_open_pwrite_pread_close.c  mmux_libc_open_write_read_close.c  mmux_libc_openat_write_read_close.c  mmux_libc_select.c  mmux_libc_select_fd.c  mmux_libc_wait.c  mmux_libc_wait_any_process.c  mmux_libc_wait_group_id.c  mmux_libc_wait_my_process_group.c  mmux_libc_wait_process_id.c  test-characters-core.c  test-common.h  test-copy-file-range.c  test-errors-strerror.c  test-fcntl-flock.c  test-file-descriptors-attributes-predicates.c  test-file-descriptors-copy-file-range-raw.c  test-file-descriptors-copy-file-range.c  test-file-descriptors-dirfd.c  test-file-descriptors-dup.c  test-file-descriptors-dup2.c  test-file-descriptors-dup3.c  test-file-descriptors-fcntl-flock.c  test-file-descriptors-file-size.c  test-file-descriptors-memfd.c  test-file-descriptors-open-pwrite-pread-close.c  test-file-descriptors-open-write-read-close.c  test-file-descriptors-openat-write-read-close.c  test-file-descriptors-openat2-write-read-close.c  test-file-descriptors-pipe.c  test-file-descriptors-preadv-pwritev.c  test-file-descriptors-preadv2-pwritev2.c  test-file-descriptors-printing.c  test-file-descriptors-pselect.c  test-file-descriptors-readv-writev.c  test-file-descriptors-select-fd.c  test-file-descriptors-select.c  test-file-descriptors-struct-flock.c  (+180 more)
